# cpsc526-c4dclone

./: .gitignore  LICENSE  Makefile  README.md  dev.sh  hi.py  init.sh  kustomization.yaml  launch_instances.sh  minikube-linux-amd64  requirements.txt  setup.py
components/c4d-server/: .gitignore  Dockerfile  Makefile  README.md  go.mod  latency_matrix_test.go  main.go  proto
components/compute-engine/: Cargo.toml  Dockerfile  README.md
components/compute-engine/src/: main.rs  recovery.py  train.py
components/compute-engine/user_code/: recovery.py  requirements.txt  test.py  train.py
components/failure-agent/: README.md  go.mod  main.go
components/failure-server/: Dockerfile  go.mod  main.go
components/monitor/: Dockerfile  Makefile  README.md  agent.go  config.go  go.mod  handlers.go  main.go  monitor.go  requirements.txt  types.go
components/mvcc/: README.md
components/task-distributor/: Dockerfile  README.md
configs/: monitoring.yaml  training.yaml
deploy/c4d-server/: service.yaml
deploy/central-node/: deployment.yaml
deploy/compute-node/: service.yaml  statefulset.yaml
deploy/compute-pod/: pod.yaml  service.yaml
deploy/failure-server/: service.yaml
deploy/shared-storage/: pv.yaml  pvc.yaml
deploy/task-distributor/: service.yaml
scripts/: build_images.sh  create_minikube_mount.sh  deploy.sh  deploy_all.sh  run-tests.sh  setup-cluster.sh  undeploy_all.sh
tests/: bandwidth-test-pod.yaml
utils/: logging.py  metrics.py
workspace/: check_connectivity.py  launch.sh  prepare_shakespeare.py  train_sample.py  train_single.py
(+78 files in other folders)
