[package]
name = "compute-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = [
    "full",
    "process",
    "rt-multi-thread",
    "macros",
    "time"
] }
env_logger = "0.11.6"
log = "0.4.22"
signal-hook = "0.3.17"
libc = "0.2.169"
sysinfo = "0.33.0"
serde_json = "1.0.134"